--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,8 +11,6 @@
 </section>
 <section class="about-banner-section">
     <div class="banner-image-wrap">
-        <!-- <img class="desktop" src="../../assets/image/about-banner.png" alt="about-banner" width="100%">
-        <img class="mobile" src="../../assets/image/about-banner-mobile.png" alt="about-banner" width="100%"> -->
     </div>
     <div class="container">
         <div class="about_cards_wrap flex">
@@ -85,13 +83,13 @@
                 <ngx-slick-carousel class="image-slider-items" #slickModal="slick-carousel" [config]="caseConfig">
 
                     <div ngxSlickItem class="image-slide">
-                        <img src="../../assets/image/img-slider-image.png" class="w-100" alt="">
+                        <img src="../../assets/image/img-slide1.png" class="w-100" alt="">
                         <div class="image-slide-text">
                             <p class="sub-text">Case Studies</p>
                             <h2 class="heading">Codesdesk Technology</h2>
                             <p class="text">Codesdesk Is Growing E-Commerce Agency Based In India Serving Global Clients Since 7+ Years</p>
                             <div class="image-slider-bt">
-                                <a routerLink="/contact" routerLinkActive="active" class="svg-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                <a routerLink="/service" routerLinkActive="active" class="svg-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                                     <path d="M8.50352 1.30566L9.49448 0.314697C9.91407 -0.104899 10.5926 -0.104899 11.0077 0.314697L19.6853 8.98784C20.1049 9.40743 20.1049 10.0859 19.6853 10.5011L11.0077 19.1787C10.5881 19.5983 9.90961 19.5983 9.49448 19.1787L8.50352 18.1877C8.07946 17.7636 8.08838 17.0718 8.52137 16.6566L13.9002 11.5322H1.07131C0.477625 11.5322 0 11.0546 0 10.4609V9.03247C0 8.43879 0.477625 7.96117 1.07131 7.96117H13.9002L8.52137 2.83674C8.08392 2.4216 8.07499 1.72972 8.50352 1.30566Z" fill="black"/>
                                     </svg>
                                 </a>
@@ -99,13 +97,13 @@
                         </div>
                     </div>
                     <div ngxSlickItem class="image-slide">
-                        <img src="../../assets/image/img-slider-image.png" class="w-100" alt="">
+                        <img src="../../assets/image/img-slide2.png" class="w-100" alt="">
                         <div class="image-slide-text">
                             <p class="sub-text">Case Studies</p>
                             <h2 class="heading">Codesdesk Technology</h2>
                             <p class="text">Codesdesk Is Growing E-Commerce Agency Based In India Serving Global Clients Since 7+ Years</p>
                             <div class="image-slider-bt">
-                                <a routerLink="/contact" routerLinkActive="active" class="svg-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                <a routerLink="/service" routerLinkActive="active" class="svg-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                                     <path d="M8.50352 1.30566L9.49448 0.314697C9.91407 -0.104899 10.5926 -0.104899 11.0077 0.314697L19.6853 8.98784C20.1049 9.40743 20.1049 10.0859 19.6853 10.5011L11.0077 19.1787C10.5881 19.5983 9.90961 19.5983 9.49448 19.1787L8.50352 18.1877C8.07946 17.7636 8.08838 17.0718 8.52137 16.6566L13.9002 11.5322H1.07131C0.477625 11.5322 0 11.0546 0 10.4609V9.03247C0 8.43879 0.477625 7.96117 1.07131 7.96117H13.9002L8.52137 2.83674C8.08392 2.4216 8.07499 1.72972 8.50352 1.30566Z" fill="black"/>
                                     </svg>
                                 </a>
@@ -113,13 +111,13 @@
                         </div>
                     </div>
                     <div ngxSlickItem class="image-slide">
-                        <img src="../../assets/image/img-slider-image.png" class="w-100" alt="">
+                        <img src="../../assets/image/img-slide3.png" class="w-100" alt="">
                         <div class="image-slide-text">
                             <p class="sub-text">Case Studies</p>
                             <h2 class="heading">Codesdesk Technology</h2>
                             <p class="text">Codesdesk Is Growing E-Commerce Agency Based In India Serving Global Clients Since 7+ Years</p>
                             <div class="image-slider-bt">
-                                <a routerLink="/contact" routerLinkActive="active" class="svg-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                <a routerLink="/service" routerLinkActive="active" class="svg-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                                     <path d="M8.50352 1.30566L9.49448 0.314697C9.91407 -0.104899 10.5926 -0.104899 11.0077 0.314697L19.6853 8.98784C20.1049 9.40743 20.1049 10.0859 19.6853 10.5011L11.0077 19.1787C10.5881 19.5983 9.90961 19.5983 9.49448 19.1787L8.50352 18.1877C8.07946 17.7636 8.08838 17.0718 8.52137 16.6566L13.9002 11.5322H1.07131C0.477625 11.5322 0 11.0546 0 10.4609V9.03247C0 8.43879 0.477625 7.96117 1.07131 7.96117H13.9002L8.52137 2.83674C8.08392 2.4216 8.07499 1.72972 8.50352 1.30566Z" fill="black"/>
                                     </svg>
                                 </a>
@@ -127,20 +125,19 @@
                         </div>
                     </div>
                     <div ngxSlickItem class="image-slide">
-                        <img src="../../assets/image/img-slider-image.png" class="w-100" alt="">
+                        <img src="../../assets/image/img-slide4.png" class="w-100" alt="">
                         <div class="image-slide-text">
                             <p class="sub-text">Case Studies</p>
                             <h2 class="heading">Codesdesk Technology</h2>
                             <p class="text">Codesdesk Is Growing E-Commerce Agency Based In India Serving Global Clients Since 7+ Years</p>
                             <div class="image-slider-bt">
-                                <a routerLink="/contact" routerLinkActive="active" class="svg-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                <a routerLink="/service" routerLinkActive="active" class="svg-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                                     <path d="M8.50352 1.30566L9.49448 0.314697C9.91407 -0.104899 10.5926 -0.104899 11.0077 0.314697L19.6853 8.98784C20.1049 9.40743 20.1049 10.0859 19.6853 10.5011L11.0077 19.1787C10.5881 19.5983 9.90961 19.5983 9.49448 19.1787L8.50352 18.1877C8.07946 17.7636 8.08838 17.0718 8.52137 16.6566L13.9002 11.5322H1.07131C0.477625 11.5322 0 11.0546 0 10.4609V9.03247C0 8.43879 0.477625 7.96117 1.07131 7.96117H13.9002L8.52137 2.83674C8.08392 2.4216 8.07499 1.72972 8.50352 1.30566Z" fill="black"/>
                                     </svg>
                                 </a>
                             </div>
                         </div>
                     </div>
-
                 </ngx-slick-carousel>
             </div>
             <div class="slider-text-side">
@@ -157,7 +154,7 @@
                     <li class="slider-items">Timely Delivery</li>
                 </ul>
                 <div class="slider-buttons flex">
-                    <a class="cdk-btn-green" href="/">Get a quote</a>
+                    <a class="cdk-btn-green" href="/contact">Get a quote</a>
                     <div class="call-cdk-wrap flex">
                         <a href="tel:+91-9988074677" class="call-icon"><img src="../../assets/image/call-icon.png" alt="icon"></a>
                         <span class="ckd-call-text flex_two">
@@ -182,61 +179,61 @@
             <div ngxSlickItem>
                 <div class="slide_wrapper flex_two" >
                     <div class="team_slider_com team_slide_one">
-                        <img src="../../assets/image/team/team-one.png" alt="">
+                        <img width="100%" src="../../assets/image/team/team-one.png" alt="">
                     </div>
                     <div class="team_slider_com team_slide_two">
                         <div class="t-s-up">
-                            <img src="../../assets/image/team/team-two.png" alt="">
+                            <img width="100%" src="../../assets/image/team/team-two.png" alt="">
                         </div>
                         <div class="t-s-down">
-                            <img src="../../assets/image/team/team-three.png" alt="">
+                            <img width="100%" src="../../assets/image/team/team-three.png" alt="">
                         </div>
                     </div>
                     <div class="team_slider_com team_slide_three">
-                        <img src="../../assets/image/team/team-four.png" alt="">
+                        <img width="100%" src="../../assets/image/team/team-four.png" alt="">
                     </div>
                 </div>  
             </div>   
             <div ngxSlickItem>
                 <div class="slide_wrapper flex_two" >
                     <div class="team_slider_com team_slide_one">
-                        <img src="../../assets/image/team/team-one.png" alt="">
+                        <img width="100%" src="../../assets/image/team/team-one.png" alt="">
                     </div>
                     <div class="team_slider_com team_slide_two">
                         <div class="t-s-up">
-                            <img src="../../assets/image/team/team-two.png" alt="">
+                            <img width="100%" src="../../assets/image/team/team-two.png" alt="">
                         </div>
                         <div class="t-s-down">
-                            <img src="../../assets/image/team/team-three.png" alt="">
+                            <img width="100%" src="../../assets/image/team/team-three.png" alt="">
                         </div>
                     </div>
                     <div class="team_slider_com team_slide_three">
-                        <img src="../../assets/image/team/team-four.png" alt="">
+                        <img width="100%" src="../../assets/image/team/team-four.png" alt="">
                     </div>
                 </div>  
             </div>
             <div ngxSlickItem>
                 <div class="slide_wrapper flex_two" >
                     <div class="team_slider_com team_slide_one">
-                        <img src="../../assets/image/team/team-one.png" alt="">
+                        <img width="100%" src="../../assets/image/team/team-one.png" alt="">
                     </div>
                     <div class="team_slider_com team_slide_two">
                         <div class="t-s-up">
-                            <img src="../../assets/image/team/team-two.png" alt="">
+                            <img width="100%" src="../../assets/image/team/team-two.png" alt="">
                         </div>
                         <div class="t-s-down">
-                            <img src="../../assets/image/team/team-three.png" alt="">
+                            <img width="100%" src="../../assets/image/team/team-three.png" alt="">
                         </div>
                     </div>
                     <div class="team_slider_com team_slide_three">
-                        <img src="../../assets/image/team/team-four.png" alt="">
+                        <img width="100%" src="../../assets/image/team/team-four.png" alt="">
                     </div>
                 </div>  
             </div>   
         </ngx-slick-carousel>
     <div class="container">
         <div class="team_slider_mobile mobile">
-            <img src="../../assets/image/team/team-one.png" alt="">
+            <img width="100%" src="../../assets/image/team/team-one.png" alt="">
         </div>
     </div>
 </section>
