--- a/src/app/blog-detail/blog-detail.component.html
+++ b/src/app/blog-detail/blog-detail.component.html
@@ -1,5 +1,5 @@
-<section class="blog-detail-section">
-    <div class="container">
+<section id="blog-detail-first" class="blog-detail-section">
+    <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
                 5 Tips for Optimizing Your Shopify Store's SEO
@@ -58,7 +58,7 @@
         </div>
     </div>
 </section>
-<section class="blogs-section">
+<section id="blogs-last-section" class="blogs-section">
     <div class="container-second">
         <div class="our_work_all_wrap">
             <div class="service-header flex space-between">
