--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="main-header-wrap flex">
             <div class="logo-wrap">
-                <a href="/">
+                <a routerLink="/">
                 <img src="../../assets/image/CD_LOGO.png" alt="">
                 </a>
             </div>
@@ -14,10 +14,10 @@
             <div class="menu-wrap flex">
                 <ul class="flex menu-ul">
                     <li>
-                        <a href="/about">About</a>
+                        <a routerLinkActive="active" routerLink="/about">About</a>
                     </li>
                     <li class="dropdown relative">
-                        <a href="/service">Service</a>
+                        <a routerLinkActive="active" routerLink="/service">Service</a>
                         <div class="dropdown-wrap">
                             <div class="megamenu-container flex">
                                 <div class="mega-side-left">
@@ -33,7 +33,7 @@
                                     <h2 class="mega-heading">services</h2>
                                     <ul class="drop-menu">
                                         <li class="drop-list">
-                                            <a href="/service-details">UX/UI Design</a>
+                                            <a href="/">UX/UI Design</a>
                                         </li>
                                         <li class="drop-list">
                                             <a href="/">shopify Web Development</a>
@@ -62,32 +62,32 @@
                         </div>
                     </li>
                     <li>
-                        <a href="/our-work">Protfolio</a>
+                        <a routerLinkActive="active" routerLink="/our-work">Protfolio</a>
                     </li>
                     <li>
-                        <a href="/blog-list">blogs</a>
+                        <a routerLinkActive="active" routerLink="/blog-list">blogs</a>
                     </li>
                 </ul>
                 <div class="bnt-wrap">
-                    <a class="cdk-btn-green" href="/contact">Get a quote</a>
+                    <a class="cdk-btn-green" routerLinkActive="active" routerLink="/contact">Get a quote</a>
                 </div>
             </div>
         </div>
         <div class="menu-wrap-mobile" id="menu">
             <ul class="menu-ul-mobile">
                 <li>
-                    <a href="/">About</a>
+                    <a routerLinkActive="active" routerLink="/about">About</a>
                 </li>
                 <li class="dm-service">
                     <div class="flex">
-                        <a href="/">Service</a><span class="tab-heading"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="11" viewBox="0 0 18 11" fill="none">
+                        <a routerLinkActive="active" routerLink="/service">Service</a><span class="tab-heading"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="11" viewBox="0 0 18 11" fill="none">
                             <path d="M7.83105 9.84547C8.48183 10.4963 9.53871 10.4963 10.1895 9.84547L16.8536 3.1814C17.3325 2.70242 17.4731 1.98916 17.2128 1.3644C16.9525 0.739649 16.3486 0.333557 15.6717 0.333557L2.34361 0.333557C1.67199 0.333557 1.06286 0.739649 0.802542 1.3644C0.542227 1.98916 0.688004 2.70242 1.16178 3.1814L7.82584 9.84547H7.83105Z" fill="white"/>
                             </svg></span>
                     </div>
                         <div class="tabcontent">
                             <ul class="">
                                 <li class="drop-list">
-                                    <a href="/service-details">UX/UI Design</a>
+                                    <a href="/">UX/UI Design</a>
                                 </li>
                                 <li class="drop-list">
                                     <a href="/">shopify Web Development</a>
@@ -114,16 +114,16 @@
                         </div>
                 </li>
                 <li>
-                    <a href="/">Protfolio</a>
+                    <a routerLinkActive="active" routerLink="/our-work">Protfolio</a>
                 </li>
                 <li>
-                    <a href="/">blogs</a>
+                    <a routerLinkActive="active" routerLink="/blog-list">blogs</a>
                 </li>
                 <li>
-                    <a href="/">team</a>
+                    <a routerLinkActive="active" routerLink="/our-team">team</a>
                 </li>
                 <li>
-                    <a href="/">contact us</a>
+                    <a routerLinkActive="active" routerLink="/contact">contact us</a>
                 </li>
             </ul>
         </div>
