--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -11,16 +11,16 @@
                     <p class="text-title">Our agency specializes in providing Shopify Plus solutions for global businesses seeking to expand their online presence.</p>
                 </div>
                 <div class="detail_count_wrap flex">
-                    <div class="first_count_wrap">
-                        <h2 class="number">10 <span>+</span></h2>
+                    <div class="first_count_wrap counter">
+                        <div class="count color-yellow"><span class="counter-number" data-count="10">0</span> +</div>
                         <h2 class="text">Years of Experince</h2>
                     </div>
-                    <div class="first_count_wrap">
-                        <h2 class="number">120 <span>+</span></h2>
+                    <div class="first_count_wrap counter">
+                        <div class="count color-yellow"><span class="counter-number" data-count="120">0</span> +</div>
                         <h2 class="text">Complete Project</h2>
                     </div>
-                    <div class="first_count_wrap">
-                        <h2 class="number">10 <span>+</span></h2>
+                    <div class="first_count_wrap counter">
+                        <div class="count color-yellow"><span class="counter-number" data-count="10">0</span> +</div>
                         <h2 class="text">Team Members</h2>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                     </div>
                 </div>
                 <div class="bnt-wrap">
-                    <a class="cdk-btn-green" href="/">View all services</a>
+                    <a class="cdk-btn-green" href="/service">View all services</a>
                 </div>
             </div>
         </div>
@@ -274,7 +274,7 @@
                     </div>
                 </div>
                 <div class="bnt-wrap">
-                    <a class="cdk-btn-green" href="/">view all projects</a>
+                    <a class="cdk-btn-green" href="/our-work">view all projects</a>
                 </div>
             </div>
         </div>
