--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -7,7 +7,7 @@
                 Our company offers top-notch Shopify e-commerce services, providing businesses with a user-friendly and customizable platform to sell their products online. Our team of experts can help with everything from store setup and design to marketing strategies and technical support, ensuring a seamless and successful online shopping experience for both the merchant and their customers. Trust us to handle your Shopify needs and watch your online sales soar.
             </p>
             <div class="cdk-buttons-wrap flex">
-                <a class="cdk-btn-green" href="/">contact us</a>
+                <a class="cdk-btn-green" href="/contact">contact us</a>
                 <a class="cdk-btn-white" (click)="scroll(target)">Our approach</a>
             </div>
         </div>
@@ -230,7 +230,7 @@
     </div>
     <div class="container">
         <div class="cdk-button-wrap margin-auto">
-            <a class="cdk-btn-green" href="/">contact us</a>
+            <a class="cdk-btn-green" href="/contact">contact us</a>
         </div>
     </div>
 </section>
