--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="blog_cards_wrapper flex" id="blogFilter">
-                <a routerLinkActive="active" routerLink="/resource" class="blog_card_wrap">
+                <a routerLink="/resource" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
                     </div>
@@ -22,7 +22,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-3" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
@@ -31,7 +31,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-2" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
@@ -40,7 +40,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-4" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-four.webp" alt="blog">
                     </div>
@@ -49,7 +49,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-5" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-five.webp" alt="blog">
                     </div>
@@ -94,7 +94,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
                     </div>
@@ -103,7 +103,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-3" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
@@ -112,7 +112,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-2" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
@@ -121,7 +121,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-4" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-four.webp" alt="blog">
                     </div>
@@ -130,7 +130,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-5" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-five.webp" alt="blog">
                     </div>
@@ -142,33 +142,6 @@
                 <a href="javascript:void(0)" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-six.webp" alt="blog">
-                    </div>
-                    <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
-                    </div>
-                </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
-                    <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-seven.webp" alt="blog">
-                    </div>
-                    <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
-                    </div>
-                </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
-                    <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-eight.webp" alt="blog">
-                    </div>
-                    <div class="blog-title-text">
-                        <h3>January 20, 2021</h3>
-                        <p>We provide creative and innovative Digital services</p>
-                    </div>
-                </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
-                    <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-nine.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
                         <h3>January 20, 2021</h3>
