--- a/src/styles.css
+++ b/src/styles.css
@@ -1392,7 +1392,7 @@ html {
 }
 #blog-detail-first.blog-detail-section .blog-header .main-heading {
     width: 100%;
-    max-width: 1050px;
+    max-width: 1055px;
     margin-bottom: 16px;
     text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.25);
     text-transform: capitalize;
@@ -1469,6 +1469,34 @@ html {
     border-radius: 10px;
     position: sticky;
     top: 50px;
+}
+#blog-detail-first.blog-detail-section .blog-body-and-newsletter .rte-blog-body h5 {
+    list-style-type: auto;
+    display: list-item;
+    color: #FFF;
+    font-family: var(--second-heading);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27px;
+    margin-left: 20px;
+    margin-bottom: 15px;
+}
+#blog-detail-first.blog-detail-section .blog-body-and-newsletter .rte-blog-body h5:first-of-type {
+    margin-top: 30px;
+}
+#blog-detail-first.blog-detail-section .blog-body-and-newsletter .rte-blog-body ol {
+    margin-left: 20px;
+    margin-top: 30px;
+}
+#blog-detail-first.blog-detail-section .blog-body-and-newsletter .rte-blog-body ol li {
+    color: #FFF;
+    font-family: var(--second-heading);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27px;
+    margin-bottom: 10px;
 }
 #blog-detail-first.blog-detail-section .blog-body-and-newsletter .blog-newslwtter-wrap .news-container {
     padding: 67px 41px;
