--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<section class="our-approach-section">
+<section class="our-approach-section space-top-p">
     <div class="container">
         <h3 class="green-text">contact us</h3>
         <div class="service-head flex space-between">
