--- a/src/app/egyptianqueenbeauty/egyptianqueenbeauty.component.html
+++ b/src/app/egyptianqueenbeauty/egyptianqueenbeauty.component.html
@@ -1,4 +1,4 @@
-<section id="main-banner">
+<section id="main-banner" class="space-top-m">
     <img src="../../assets/image/portfolio/egyptain/main-banner.webp" alt="" width="100%" class="main-banner-image desktop">
     <img src="../../assets/image/portfolio/egyptain/main-banner-mobile.webp" alt="" width="100%" class="main-banner-image mobile">
 </section>
