--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,4 +1,4 @@
-<section class="privacy-policy">
+<section class="privacy-policy space-top-m">
     <div class="container">
         <div class="privacy-heading-and-text-wrap flex_two">
             <div class="heading-container">
