--- a/src/app/service-details/service-details.component.css
+++ b/src/app/service-details/service-details.component.css
@@ -5,7 +5,7 @@
     background-size: cover;
     width: 100%;
     position: relative;
-    padding: 87px 0;
+    padding: 176.8px 0 87px;
 }
 #service-three.service-bacground-section {
     background: url(../../assets/image/servicre-inner/service-detail-bacground.webp);
