--- a/src/app/service-details/service-details.component.html
+++ b/src/app/service-details/service-details.component.html
@@ -1,4 +1,4 @@
-<section id="service-main" class="main-title-section">
+<section id="service-main" class="main-title-section space-top-p">
     <div id="container" class="container">
         <div class="main-title-wrap">
             <h3 class="green-text">Shopify Design</h3>
