--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -1,4 +1,4 @@
-<section class="main-title-section">
+<section class="main-title-section space-top-m">
     <div class="container">
         <div class="main-title-wrap">
             <h3 class="green-text">What we do</h3>
