--- a/src/styles.css
+++ b/src/styles.css
@@ -251,6 +251,12 @@ body {
 .w-100 {
     width: 100%;
 }
+.space-top-p {
+    padding-top: 89.8px;
+}
+.space-top-m {
+    margin-top: 89.8px;
+}
 .margin-auto {
     margin: 0 auto;
 }
