--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<section class="main-title-section">
+<section class="main-title-section space-top-p">
     <div class="container">
         <div class="main-title-wrap">
             <h3 class="green-text">OUR STORY</h3>
