--- a/src/app/shopify-apps-blog/shopify-apps-blog.component.html
+++ b/src/app/shopify-apps-blog/shopify-apps-blog.component.html
@@ -1,4 +1,4 @@
-<section id="blog-detail-first" class="blog-detail-section">
+<section id="blog-detail-first" class="blog-detail-section space-top-p">
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
