--- a/src/app/shopify-web-development/shopify-web-development.component.css
+++ b/src/app/shopify-web-development/shopify-web-development.component.css
@@ -5,7 +5,7 @@
     background-size: cover;
     width: 100%;
     position: relative;
-    padding: 87px 0;
+    padding: 176.8px 0 87px;
 }
 .c-2-heading.last {
     margin-top: 50px;
